fix: the selection on readonly mathfields was no longer visible

--- a/css/mathfield.less
+++ b/css/mathfield.less
@@ -212,10 +212,7 @@ with this style */
   color:  var(--_smart-fence-color);
 }
 
-.ML__focused .ML__selection {
-  background: var(--_selection-background-color) !important;
-}
-.ML__focused .ML__selected,
+.ML__selected,
 .ML__focused .ML__selected .ML__contains-caret,
 .ML__focused .ML__selected .ML__smart-fence__close,
 .ML__focused .ML__selected .ML__placeholder {
@@ -223,7 +220,7 @@ with this style */
   opacity: 1;
 }
 
-.ML__focused .ML__selection {
+.ML__selection {
   box-sizing: border-box;
   background: var(--_selection-background-color) !important;
 }
